syntax = "proto3";
package todo;

import "google/api/annotations.proto";

option go_package = "./;genpb";

message getTodoParams{}

message addTodoParams {
  string task = 1;
}

message deleteTodoParams {
  string id = 1;
}

message todoObject {
  string id = 1;
  string task = 2;
}

message todoResponse {
  repeated todoObject todos = 1;
}

message deleteResponse {
  string message = 1;
}  

service todoService {
  rpc addTodo(addTodoParams) returns (todoObject) {
    option (google.api.http) = {
      post: "/v1/todo/add"
      body: "*"
    };
  }
  rpc deleteTodo(deleteTodoParams) returns (deleteResponse) {   
    option (google.api.http) = {
      delete: "/v1/todo/delete/{id}"
    };
  }
  rpc getTodos(getTodoParams) returns (todoResponse) {    
    option (google.api.http) = {
      get: "/v1/todo/list"
    };
  }
}
